--- a/BuildingThemes/BuildingThemes.csproj
+++ b/BuildingThemes/BuildingThemes.csproj
@@ -64,10 +64,6 @@
     <Compile Include="Configuration.cs" />
     <Compile Include="Debugger.cs" />
     <Compile Include="Detour\BuildingInfoDetour.cs" />
-    <Compile Include="Detour\DistrictManagerDetour.cs" />
-    <Compile Include="Detour\ImmaterialResourceManagerDetour.cs" />
-    <Compile Include="Detour\BuildingManagerDetour.cs" />
-    <Compile Include="Detour\ZoneBlockDetour.cs" />
     <Compile Include="GUI\ThemeManager\BuildingItem.cs" />
     <Compile Include="GUI\ThemeManager\CategoryUtils.cs" />
     <Compile Include="GUI\ThemeManager\UIBuildingPreview.cs" />
@@ -90,18 +86,16 @@
     <Compile Include="GUI\UITitleBar.cs" />
     <Compile Include="GUI\UIUtils.cs" />
     <Compile Include="LoadingExtension.cs" />
+    <Compile Include="Patches\BuildingManagerPatch.cs" />
+    <Compile Include="Patches\DistrictManagerPatch.cs" />
     <Compile Include="Patches\DistrictWorldInfoPanelPatch.cs" />
+    <Compile Include="Patches\ImmaterialResourceManagerPatch.cs" />
     <Compile Include="Patches\Patcher.cs" />
     <Compile Include="Patches\PoliciesPanelPatch.cs" />
     <Compile Include="Patches\PrivateBuildingAIPatch.cs" />
+    <Compile Include="Patches\ZoneBlockPatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomBuildings.cs" />
-    <Compile Include="Redirection\RedirectionUtil.cs" />
-    <Compile Include="Redirection\RedirectMethodAttribute.cs" />
-    <Compile Include="Redirection\Redirector.cs" />
-    <Compile Include="Redirection\RedirectReverseAttribute.cs" />
-    <Compile Include="Redirection\TargetTypeAttribute.cs" />
-    <Compile Include="Redirection\Tuple.cs" />
     <Compile Include="SerializableDataExtension.cs" />
     <Compile Include="GUI\ThemePolicies\ThemePolicyContainer.cs" />
     <Compile Include="Util.cs" />
